...
      {showInput && (
        <View className="mb-3 px-5 py-3 flex-row items-center justify-center bg-white/5 border border-white/25 rounded-3xl">
          <Feather name="search" size={24} color="#999999" />

          <TextInput
            className="ml-2 flex-1"
            placeholder="Search Pókemon..."
            placeholderTextColor="#999999"
            value={search}
            onChangeText={(text) => setSearch(text)}
            style={{ color: "white" }}
            autoFocus
          />
...
