appId: ${APP_ID}
---
- repeat:
    while:
      notVisible: "Search Pókemon..."
    commands:
      - tapOn:
          id: "search-icon"
- takeScreenshot: "search-pokemon-blank"
- inputText: ${output.pokemon.input}
- takeScreenshot: "search-pokemon-${output.pokemon.input}"
- runFlow:
    when:
      visible: ".*continue.*"
    commands:
      - tapOn: ".*continue.*"
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "return"
- tapOn:
    id: "name-${output.pokemon.name}"